# PowerToChoose

./: .gitignore  .replit  CLAUDE.md  README.md  cleanSkyParser.py  example_usage.json  main.py  power_plans_data.csv  process.py  pyproject.toml
.github/workflows/: daily-efl-sync.yml  deploy-ui.yml  power.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-pdf-processing-infrastructure/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-RESEARCH.md
.planning/phases/02-llm-integration-data-extraction/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md
.planning/quick/260322-1vo-build-github-actions-daily-efl-sync-work/: 260322-1vo-PLAN.md  260322-1vo-SUMMARY.md
.planning/quick/260322-2gp-migrate-from-aiosqlite-to-turso-libsql/: 260322-2gp-PLAN.md  260322-2gp-RESEARCH.md  260322-2gp-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
api/: config.py  main.py  pyproject.toml  render.yaml  requirements.txt
api/data/: power2choose.db
api/database/: connection.py  schema.sql
api/models/: efl.py  job.py  validation.py
api/routers/: efl.py  plans.py
api/services/: downloader.py  efl_extractor.py  llm_client.py  pdf_processor.py  validator.py
api/tasks/: process_efl.py
api/tests/: test_batch_endpoint.py  test_downloader.py  test_efl_extractor.py  test_efl_models.py  test_job_tracking.py  test_pdf_processor.py  test_process_efl.py  test_storage.py  test_validator.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
(+9 files in other folders)
