[project]
name = "power2choose-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "uvicorn>=0.41.0",
    "pdfplumber>=0.11.9",
    "aiosqlite>=0.21.0",
    "tenacity>=9.0.0",
    "pydantic-settings>=2.13.1",
    "litellm>=1.82.5",
    "instructor>=1.14.5",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]
